# spdlog-issue-973

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
spdlog_issue_973/: thread_holder.cpp  thread_holder.hpp  thread_holder_export.hpp  thread_holder_internal.cpp  thread_holder_internal.hpp
